# mini-rag-agentic

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  README.md  docker-compose.yml  pyproject.toml
src/mini_rag/: __init__.py  agent.py  cli_command_handler.py  configuration.py  document_processor.py  embeddings.py  exceptions.py  llm.py  logging_utils.py  models.py  retriever.py
tests/: conftest.py  test_agent.py  test_cli_command_handler.py  test_document_processor.py  test_embeddings.py  test_exceptions.py  test_llm.py  test_logging.py  test_models.py  test_retriever.py
